testcases/invalid/semanticErr/sideeffect/sideEffectTypeErr03.wacc
# type mismatch: int <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  string s = "something";
  s /= (88 || 11)
end